--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     },
     "permissions": [
         "clipboardRead",
-        "clipboardWrite"
+        "clipboardWrite",
+        "tabs"
     ],
     "icons": {
         "48": "./images/logo.png"
